# fastapi-ecs

./: .pre-commit-config.yaml  Dockerfile  README.md  buildspec.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: __main__.py
tests/: test_main.py
